--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "react-start": "set BROWSER=none && yarn start",
-    "electron-start": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "electron-start": "set ELECTRON_START_URL=https://memorganized.vercel.app/ && electron .",
     "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/Main.js"
   },
   "eslintConfig": {
