--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-transition-group": "^4.4.6",
     "firebase": "^9.22.0",
     "gsap": "^3.11.5",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
