--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Memor",
-  "name": "Memorganized",
+  "short_name": "간편한 메모",
+  "name": "간편한 메모",
   "icons": [
     {
       "src": "favicon.ico",
